--- a/galaxy_game/app/views/admin/dashboard/index.html.erb
+++ b/galaxy_game/app/views/admin/dashboard/index.html.erb
@@ -153,7 +153,7 @@
                 <button class="tool-button" onclick="window.location.href='/admin/celestial_bodies'">
                     🌍 Celestial Bodies
                 </button>
-                <button class="tool-button" onclick="window.location.href='/admin/development_corporations'">
+                <button class="tool-button" onclick="window.location.href='/admin/organizations'">
                     🏢 Organization Monitor
                 </button>
                 <button class="tool-button" onclick="window.location.href='/admin/settlements'">
