Fix NoMethodError: undefined method 'star_type' for CelestialBodies::Star
- Change star_type to type_of_star in admin views
- Fixed in galaxies/show.html.erb, solar_systems/index.html.erb, solar_systems/show.html.erb, and public solar_systems/show.html.erb
- All admin controller tests passing (13/13)

--- a/galaxy_game/app/views/solar_systems/show.html.erb
+++ b/galaxy_game/app/views/solar_systems/show.html.erb
@@ -20,7 +20,7 @@
       <div class="system-info">
         <h2><%= @solar_system.name %></h2>
         <p>Star: <%= @solar_system.stars.first&.name || "Unknown" %> 
-           (<%= @solar_system.stars.first&.star_type || "Unknown Type" %>)</p>
+           (<%= @solar_system.stars.first&.type_of_star || "Unknown Type" %>)</p>
         <p>Planets: <%= @celestial_bodies.count %></p>
       </div>
     </div>
